tests/ui/runtime-decision-arm-index-private.rs
use hibana::runtime::resolver::DecisionArm;

fn main() {
    let _ = DecisionArm::Left.index();
}
